--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
   font-family: Avenir, Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+footer{
   text-align: center;
-  color: #2c3e50;
-  margin-top: 60px;
+  color: var(--gray);
 }
