--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
   font-family: Avenir, Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  position: relative;
 }
 footer{
   text-align: center;
