feat: details style

--- a/src/styles/base.styl
+++ b/src/styles/base.styl
@@ -1,8 +1,8 @@
 body{
-  word-spacing:15px;
+  //word-spacing:15px;
 }
 hr{
   border-top:1px solid #ddd;
   border-bottom:none;
-  margin:1em 0 1.6em;
+  margin:1em 0;
 }
