--- a/src/styles/fn.styl
+++ b/src/styles/fn.styl
@@ -3,6 +3,8 @@ colorGroup(key,value){
   {key}: value;
   {key}-hover: lighten(value, 10%);
   {key}-active: darken(value, 15%);
+  {key}-shadow: rgba(value, .16);
+  {key}-shadow2:rgba(value, .08);
 }
 buttonFn(type){
   border:1px solid var(type);
