--- a/src/styles/var.styl
+++ b/src/styles/var.styl
@@ -1,6 +1,6 @@
 @import 'fn'
 //stylus var
-primary = #096dd9;
+primary = rgb(109, 60, 255);
 warning = #faad14;
 danger = #ff4d4f;
 gray = #dadada;
