--- a/src/styles/form.styl
+++ b/src/styles/form.styl
@@ -11,6 +11,9 @@ button,input{
   &:focus{
     animation:spread .36s ease-in-out;
   }
+  // &:focus-visible{
+  //   animation:spread .36s ease-in-out;
+  // }
   &:disabled{
     pointer-events:none;
     cursor:not-allowed;
@@ -220,7 +223,7 @@ input[type=date]{
   border-radius:var(--radius-val);
   &:focus{
     border-color:var(--primary);
-    box-shadow:0 0 0 .2em rgba(1 117 216,.1)
+    box-shadow:0 0 0 .26em var(--shadow2);
   }
   &:focus-visible{
     
