--- a/src/styles/base.styl
+++ b/src/styles/base.styl
@@ -1,8 +1,19 @@
 body{
   //word-spacing:15px;
+  margin: 0;
+  position: relative;
+  padding: 15px;
+  height: 100%;
+  overflow-y: auto;
 }
 hr{
   border-top:1px solid #ddd;
   border-bottom:none;
   margin:1em 0;
+}
+form{
+  label{
+    display: inline-block;
+    
+  }
 }
