feat: demo style & linear-color

--- a/src/styles/var.styl
+++ b/src/styles/var.styl
@@ -12,14 +12,17 @@ gray = #dadada;
   colorGroup(--warning,warning)
   colorGroup(--danger,danger)
   colorGroup(--gray,gray)
+  colorGroup(--linear-primary,gray)
   --radius-val:2px;
   --shadow:var(--primary-shadow);
   --shadow2:var(--primary-shadow2);
+
+  --linear:linear-gradient(315deg,#6772FF 0,#00F9E5 100%);
 }
 
 html{
-  font-size: 16px;
-  --size:16px;
+  font-size: 14px;
+  --size:14px;
 }
 @media screen and (max-width: 1380px) {
   html{
