--- a/src/styles/dialog.styl
+++ b/src/styles/dialog.styl
@@ -41,5 +41,9 @@ details{
     &>div{
         padding-left: 10px;
         line-height: 2;
+        button,input{
+            margin-top: .4em;
+            margin-bottom: .4em;
+        }
     }
 }
