--- a/src/styles/form.styl
+++ b/src/styles/form.styl
@@ -42,6 +42,7 @@ button,input[type="button"] {
 createButton('primary',--primary)
 createButton('warning',--warning)
 createButton('danger',--danger)
+createButton('linear',--linear)
 button[size="big"]{
   --size:22px
 }
@@ -208,7 +209,7 @@ input[data-type="tick"]{
   0%{
     box-shadow:0 0 0 0 rgba(0 0 0,0);
   }
-  40%{
+  30%{
     box-shadow:0 0 0 0 rgba(0 0 0,0);
   }
   60%{
