--- a/src/styles/form.styl
+++ b/src/styles/form.styl
@@ -272,3 +272,101 @@ input[type="color"]{
     border:none;
   }
 }
+
+input[type="range"]{
+  position: relative;
+  appearance: none;
+  font-size: 14px;
+  width :100%;
+  height: .6em;
+  border-radius: var(--radius-val);
+  transition:all .2s;
+  //writing-mode:vertical-lr;
+  //background-color: var(--primary);
+  background: -webkit-linear-gradient(var(--primary), var(--primary)) no-repeat #ddd;
+  background-size: var(--value) 100%;
+  // i{
+  //   color: #fff;
+  // }
+  &:focus,
+  &:active{
+    box-shadow: none;
+    animation:none;
+  }
+  &:focus-within{
+    &::before,
+    &::after{
+      transition:all .1s;
+      display: block;
+      height: auto;
+    }
+  }
+  &::before,&::after{
+    position: absolute;
+    display: none;
+  }
+  &::after{
+    content:  attr( value );
+    left: calc(var(--value)*0.97 - .3em);
+    bottom: 1.5em;
+    background: rgba(100,100,100,.7);
+    width: 2em;
+    text-align: center;
+    height: 0;
+    color: #fff;
+    padding: .1em 0;
+    border-radius: .2em;
+  }
+  &::before{
+    content: '';
+    left: calc(var(--value)*0.97 + .35em);
+    bottom: .9em;
+    width:0;
+    height: 0;
+    border-style: solid;
+    border-width: .3em;
+    border-color: rgba(100,100,100,.7) transparent transparent transparent;
+  }
+  &::-webkit-slider-runnable-track {
+    //border:1px dashed #ccc;
+  }
+  &::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    background-color: #fff;
+    box-shadow: 0 0 3px rgba(0,0,0,.2);
+    width: 1.5em;
+    height: 1.5em;
+    border-radius: .75em;
+    cursor:move;
+    &:hover{
+      transition:all .2s;
+      background: linear-gradient(45deg,#fff, #ddd);
+    }
+    &:active{
+      box-shadow:0 0 0 .3em var(--primary-shadow2);
+    }
+    &:focus{
+      animation:spread .4s ease-in-out;
+    }
+    &::after{
+      content: ' ';
+      display: block;
+      width: 1em;
+      height:1em;
+      background: #ccc;
+    }
+  }
+  &:disabled{
+    opacity:.5;
+    //pointer-events: auto;
+    cursor:not-allowed;
+  }
+  &[data-dir="vertical"]{
+    transform: rotate(-90deg);
+    transform-origin: right top;
+  }
+}
+
+input[type="range" i]{
+  //color: #fff;
+}
