--- a/src/styles/dialog.styl
+++ b/src/styles/dialog.styl
@@ -40,10 +40,11 @@ details{
     }
     &>div{
         padding-left: 10px;
+        padding-right: 10px;
         line-height: 2;
-        button,input{
-            margin-top: .4em;
-            margin-bottom: .4em;
-        }
+        // button,input{
+        //     margin-top: .4em;
+        //     margin-bottom: .4em;
+        // }
     }
 }
