--- a/style.css
+++ b/style.css
@@ -9,6 +9,9 @@
 }
 body{
   color: #7f72a6;
+  width: var(--page-width);
+  margin: 0 auto;
+  box-sizing: border-box;
 }
 .github{
   position: fixed;
@@ -33,7 +36,7 @@ body{
 }
 .range-vertical{
   width: 200px;
-  height: 200px;
+  height: 150px;
 }
 footer{
   text-align: center;
