--- a/src/styles/fn.styl
+++ b/src/styles/fn.styl
@@ -1,7 +1,7 @@
 // fn
 colorGroup(key,value){
   {key}: value;
-  {key}-hover: lighten(value, 10%);
+  {key}-hover: lighten(value, 15%);
   {key}-active: darken(value, 15%);
   {key}-shadow: rgba(value, .18);
   {key}-shadow2:rgba(value, .09);
@@ -28,4 +28,12 @@ createButton(type,value){
   button[data-type={type}]{
     buttonFn(value);
   }
+}
+
+createSize(value){
+  --size-small:value - 2px;
+  --size-default:value;
+  --size-big:value + 2px;
+  --size-large:value + 4px;
+
 }
