feat:dialog && input hover

--- a/src/styles/base.styl
+++ b/src/styles/base.styl
@@ -1,6 +1,9 @@
+html{
+  position: relative;
+}
 body{
   //word-spacing:15px;
-  position: relative;
+  //position: relative;
   padding: 15px;
   height: 100%;
   overflow-y: auto;
