--- a/src/styles/var.styl
+++ b/src/styles/var.styl
@@ -2,13 +2,12 @@
 //stylus var
 primary = rgb(97, 50, 239);
 warning = #faad14;
-danger = #ff4d4f;
-gray = #dadada;
+danger  = #ff4d4f;
+gray    = #e1e2e3;
 
 // 1080 :1920 * 1080 -- 23.16%
 // 2k :2560 * 1440
 // 4k :3840 * 2160
-
 
 
 /* css vars */
