--- a/src/styles/fn.styl
+++ b/src/styles/fn.styl
@@ -3,6 +3,7 @@ colorGroup(key,value){
   {key}: value;
   {key}-hover: lighten(value, 15%);
   {key}-active: darken(value, 15%);
+  {key}-opacity: rgba(value, .5);
   {key}-shadow: rgba(value, .18);
   {key}-shadow2:rgba(value, .09);
 }
