feat: style to less

--- a/src/styles/dialog.less
+++ b/src/styles/dialog.less
@@ -31,7 +31,7 @@ details{
     }
     &[open]{
         summary{
-            border-bottom: px dashed var(--gray)
+            border-bottom: px dashed var(--gray);
             padding-bottom: .6em;
             
         }
