--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -4,7 +4,7 @@ html{
 body{
   //word-spacing:15px;
   //position: relative;
-  padding: 15px;
+  //padding: 15px;
   height: 100%;
   overflow-y: auto;
 }
@@ -16,6 +16,6 @@ hr{
 form{
   label{
     display: inline-block;
-    
   }
 }
+.hide{display: none;}
