--- a/src/styles/var.less
+++ b/src/styles/var.less
@@ -42,8 +42,8 @@ html{
 }
 @media screen and (max-width: 1380px) {
   html{
-    font-size: 12px;
-    --size:12px;
+    // font-size: 12px;
+    // --size:12px;
     --size-small:10px;
     --button-height:2.3334em;
   }
